Fix double border with split buttons and jquery ui

--- a/css/buttons.jqueryui.scss
+++ b/css/buttons.jqueryui.scss
@@ -87,6 +87,7 @@ div.dt-btn-split-wrapper {
 		font-size: 10px;
 		height: 29.5px;
 		border-radius: 0px;
+		margin-left: -1px;
 	}
 }
 
